k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: escola-system
  labels:
    app.kubernetes.io/part-of: sistema-escolar
    environment: production
